-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 Beta1
-
None
-
Windows
-
Qt5: d4c548ce5c0bd8a70c82ed082bc69fd41e9c47ed Qt4: 0af360cff29fbc1182d3553255091de2cc673194
If the user uses key combinations containing alt it is possible that an assert happens and/or a wrong character is inserted.
In order to reproduce just start the wiggly examples (qtbase/examples/widgets/widgets/wiggly), press alt, press left, release left, release alt. The program asserts and/or a black diamond is inserted into the line edit.
- relates to
-
QTBUG-33409 Shift modifier does not work in key press event
-
- Closed
-
| For Gerrit Dashboard: QTBUG-35005 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 71682,4 | Fixed assert in Windows key handling | release | qt/qtbase | Status: MERGED | +2 | 0 |
| 72384,1 | Fixed assert in Windows key handling | 4.8 | qt/qt | Status: MERGED | +2 | 0 |