src/gui/kernel/qkeymapper_win.cpp
@@ -86,6 +86,12 @@ bool GetKeyboardState(unsigned char* kbuffer)
     return true;
 }
 #endif
+
+// We not only need the scancode itself but also the extended bit of key messages. Thus we need
+// the additional bit when masking the scancode.
+enum { scancodeBitmask = 0x1ff };
+
+
 // Key recorder ------------------------------------------------------------------------[ start ] --
 struct KeyRecord {
     KeyRecord(int c, int a, int s, const QString &t) : code(c), ascii(a), state(s), text(t) {}
@@ -662,7 +668,7 @@ void QKeyMapperPrivate::updateKeyMap(const MSG &msg)
 {
     unsigned char kbdBuffer[256]; // Will hold the complete keyboard state
     GetKeyboardState(kbdBuffer);
-    const quint32 scancode = (msg.lParam >> 16) & 0xff;
+    const quint32 scancode = (msg.lParam >> 16) & scancodeBitmask;
     updatePossibleKeyCodes(kbdBuffer, scancode, msg.wParam);
 }
 
@@ -800,7 +806,7 @@ bool QKeyMapperPrivate::translateKeyEvent(QWidget *widget, const MSG &msg, bool 
     // Add this key to the keymap if it is not present yet.
     updateKeyMap(msg);
 
-    const quint32 scancode = (msg.lParam >> 16) & 0xff;
+    const quint32 scancode = (msg.lParam >> 16) & scancodeBitmask;
     const quint32 vk_key = msg.wParam;
 
     quint32 nModifiers = 0;
